# qobuz-proxy

./: .env.example  .gitignore  Dockerfile  Dockerfile.local  README.md  config.yaml.example  docker-compose.yaml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-27-multi-speaker.md  2026-04-08-webui-speaker-config.md
docs/superpowers/specs/: 2026-03-27-multi-speaker-design.md  2026-04-08-webui-speaker-config-design.md
qobuz_proxy/: __init__.py  app.py  cli.py  config.py  speaker.py
qobuz_proxy/auth/: __init__.py  api_client.py  credentials.py  oauth.py
qobuz_proxy/backends/: __init__.py  base.py  factory.py
qobuz_proxy/backends/dlna/: __init__.py  backend.py  client.py  discovery.py  proxy_server.py
qobuz_proxy/backends/local/: backend.py  device.py  ring_buffer.py  stream.py
qobuz_proxy/connect/: discovery.py  protocol.py  ws_manager.py
qobuz_proxy/playback/: command_handler.py  player.py
qobuz_proxy/proto/: qconnect_payload_pb2.py
qobuz_proxy/webui/: config_writer.py  routes.py  speaker_routes.py
qobuz_proxy/webui/static/: app.js  index.html  style.css
tests/: test_app_auth_flow.py  test_app_local_backend.py  test_config.py  test_multi_speaker.py  test_speaker.py  test_speaker_config.py
tests/auth/: test_api_client.py  test_credentials.py
tests/backends/: test_local_backend.py  test_local_buffer_status.py  test_local_config.py  test_local_device.py  test_local_ring_buffer.py  test_local_seek.py
tests/connect/: test_protocol.py  test_ws_manager.py
tests/webui/: test_config_writer.py  test_routes.py  test_speaker_routes.py
