[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qobuz-proxy"
version = "0.1.0"
description = "Headless Qobuz music player service with DLNA support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "leolobato"}]
keywords = ["qobuz", "dlna", "music", "streaming", "sonos", "heos", "upnp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "websockets>=12.0",
    "protobuf>=4.25.0",
    "aiohttp>=3.9.0",
    "zeroconf>=0.131.0",
    "async-upnp-client>=0.38.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "pyjwt>=2.8.0",
]

[project.urls]
Repository = "https://github.com/leolobato/qobuz-proxy"
"Bug Tracker" = "https://github.com/leolobato/qobuz-proxy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0",
]
local = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
]

[project.scripts]
qobuz-proxy = "qobuz_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qobuz_proxy*"]

[tool.setuptools.package-data]
"qobuz_proxy.webui" = ["static/**/*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
